# grpc/tradepipe.pb.go
@@ -1,0 +1,112 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.28.1
+// 	protoc        v3.21.8
+// source: api/proto/tradepipe.proto
+
+package grpc
+
+import (
+	login "github.com/Sannrox/tradepipe/grpc/login"
+	portfolio "github.com/Sannrox/tradepipe/grpc/portfolio"
+	timeline "github.com/Sannrox/tradepipe/grpc/timeline"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+var File_api_proto_tradepipe_proto protoreflect.FileDescriptor
+
+var file_api_proto_tradepipe_proto_rawDesc = []byte{
+	0x0a, 0x19, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x74, 0x72, 0x61, 0x64,
+	0x65, 0x70, 0x69, 0x70, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x04, 0x67, 0x72, 0x70,
+	0x63, 0x1a, 0x1b, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x6c, 0x6f, 0x67,
+	0x69, 0x6e, 0x2f, 0x6c, 0x6f, 0x67, 0x69, 0x6e, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x21,
+	0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x6c, 0x69,
+	0x6e, 0x65, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x6c, 0x69, 0x6e, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x1a, 0x23, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x70, 0x6f, 0x72,
+	0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x2f, 0x70, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0xc9, 0x02, 0x0a, 0x09, 0x54, 0x72, 0x61, 0x64, 0x65,
+	0x50, 0x69, 0x70, 0x65, 0x12, 0x2f, 0x0a, 0x05, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x12, 0x12, 0x2e,
+	0x6c, 0x6f, 0x67, 0x69, 0x6e, 0x2e, 0x43, 0x72, 0x65, 0x64, 0x65, 0x6e, 0x74, 0x69, 0x61, 0x6c,
+	0x73, 0x1a, 0x10, 0x2e, 0x6c, 0x6f, 0x67, 0x69, 0x6e, 0x2e, 0x50, 0x72, 0x6f, 0x63, 0x65, 0x73,
+	0x73, 0x49, 0x64, 0x22, 0x00, 0x12, 0x30, 0x0a, 0x06, 0x56, 0x65, 0x72, 0x69, 0x66, 0x79, 0x12,
+	0x10, 0x2e, 0x6c, 0x6f, 0x67, 0x69, 0x6e, 0x2e, 0x54, 0x77, 0x6f, 0x46, 0x41, 0x41, 0x73, 0x6b,
+	0x73, 0x1a, 0x12, 0x2e, 0x6c, 0x6f, 0x67, 0x69, 0x6e, 0x2e, 0x54, 0x77, 0x6f, 0x46, 0x41, 0x52,
+	0x65, 0x74, 0x75, 0x72, 0x6e, 0x22, 0x00, 0x12, 0x43, 0x0a, 0x08, 0x54, 0x69, 0x6d, 0x65, 0x6c,
+	0x69, 0x6e, 0x65, 0x12, 0x19, 0x2e, 0x74, 0x69, 0x6d, 0x65, 0x6c, 0x69, 0x6e, 0x65, 0x2e, 0x52,
+	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x54, 0x69, 0x6d, 0x65, 0x6c, 0x69, 0x6e, 0x65, 0x1a, 0x1a,
+	0x2e, 0x74, 0x69, 0x6d, 0x65, 0x6c, 0x69, 0x6e, 0x65, 0x2e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
+	0x73, 0x65, 0x54, 0x69, 0x6d, 0x65, 0x6c, 0x69, 0x6e, 0x65, 0x22, 0x00, 0x12, 0x4a, 0x0a, 0x0f,
+	0x54, 0x69, 0x6d, 0x65, 0x6c, 0x69, 0x6e, 0x65, 0x44, 0x65, 0x74, 0x61, 0x69, 0x6c, 0x73, 0x12,
+	0x19, 0x2e, 0x74, 0x69, 0x6d, 0x65, 0x6c, 0x69, 0x6e, 0x65, 0x2e, 0x52, 0x65, 0x71, 0x75, 0x65,
+	0x73, 0x74, 0x54, 0x69, 0x6d, 0x65, 0x6c, 0x69, 0x6e, 0x65, 0x1a, 0x1a, 0x2e, 0x74, 0x69, 0x6d,
+	0x65, 0x6c, 0x69, 0x6e, 0x65, 0x2e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x54, 0x69,
+	0x6d, 0x65, 0x6c, 0x69, 0x6e, 0x65, 0x22, 0x00, 0x12, 0x48, 0x0a, 0x09, 0x50, 0x6f, 0x73, 0x69,
+	0x74, 0x69, 0x6f, 0x6e, 0x73, 0x12, 0x1b, 0x2e, 0x70, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69,
+	0x6f, 0x2e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x50, 0x6f, 0x73, 0x69, 0x74, 0x69, 0x6f,
+	0x6e, 0x73, 0x1a, 0x1c, 0x2e, 0x70, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x2e, 0x52,
+	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x50, 0x6f, 0x73, 0x69, 0x74, 0x69, 0x6f, 0x6e, 0x73,
+	0x22, 0x00, 0x42, 0x23, 0x5a, 0x21, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d,
+	0x2f, 0x53, 0x61, 0x6e, 0x6e, 0x72, 0x6f, 0x78, 0x2f, 0x74, 0x72, 0x61, 0x64, 0x65, 0x70, 0x69,
+	0x70, 0x65, 0x2f, 0x67, 0x72, 0x70, 0x63, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var file_api_proto_tradepipe_proto_goTypes = []interface{}{
+	(*login.Credentials)(nil),           // 0: login.Credentials
+	(*login.TwoFAAsks)(nil),             // 1: login.TwoFAAsks
+	(*timeline.RequestTimeline)(nil),    // 2: timeline.RequestTimeline
+	(*portfolio.RequestPositions)(nil),  // 3: portfolio.RequestPositions
+	(*login.ProcessId)(nil),             // 4: login.ProcessId
+	(*login.TwoFAReturn)(nil),           // 5: login.TwoFAReturn
+	(*timeline.ResponseTimeline)(nil),   // 6: timeline.ResponseTimeline
+	(*portfolio.ResponsePositions)(nil), // 7: portfolio.ResponsePositions
+}
+var file_api_proto_tradepipe_proto_depIdxs = []int32{
+	0, // 0: grpc.TradePipe.Login:input_type -> login.Credentials
+	1, // 1: grpc.TradePipe.Verify:input_type -> login.TwoFAAsks
+	2, // 2: grpc.TradePipe.Timeline:input_type -> timeline.RequestTimeline
+	2, // 3: grpc.TradePipe.TimelineDetails:input_type -> timeline.RequestTimeline
+	3, // 4: grpc.TradePipe.Positions:input_type -> portfolio.RequestPositions
+	4, // 5: grpc.TradePipe.Login:output_type -> login.ProcessId
+	5, // 6: grpc.TradePipe.Verify:output_type -> login.TwoFAReturn
+	6, // 7: grpc.TradePipe.Timeline:output_type -> timeline.ResponseTimeline
+	6, // 8: grpc.TradePipe.TimelineDetails:output_type -> timeline.ResponseTimeline
+	7, // 9: grpc.TradePipe.Positions:output_type -> portfolio.ResponsePositions
+	5, // [5:10] is the sub-list for method output_type
+	0, // [0:5] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_api_proto_tradepipe_proto_init() }
+func file_api_proto_tradepipe_proto_init() {
+	if File_api_proto_tradepipe_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_api_proto_tradepipe_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   0,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_proto_tradepipe_proto_goTypes,
+		DependencyIndexes: file_api_proto_tradepipe_proto_depIdxs,
+	}.Build()
+	File_api_proto_tradepipe_proto = out.File
+	file_api_proto_tradepipe_proto_rawDesc = nil
+	file_api_proto_tradepipe_proto_goTypes = nil
+	file_api_proto_tradepipe_proto_depIdxs = nil
+}
